<resources>
    <string name="app_name">Pick And Gol</string>
    <string name="edit_user_name">Name</string>
    <string name="edit_user_email">Email</string>
    <string name="edit_user_save_button_text">Save</string>
    <string name="user_edit_change_password">Change password</string>
    <string name="edit_user_old_password">Old password</string>
    <string name="edit_user_new_password">New password</string>
    <string name="new_event_name">Name:</string>
    <string name="new_event_category">Category:</string>
    <string name="new_event_date">Date:</string>
    <string name="new_event_time">Time:</string>
    <string name="new_event_description">Description (optional):</string>
    <string name="new_event_image">Image (optional):</string>
    <string name="new_event_activity_create_event">Create an Event</string>
    <string name="new_event_activity_spinner_default_text"><![CDATA[<Choose One>]]></string>
    <string name="event_search_settings_activity_spinner_default_text">All</string>
    <string name="new_pub_name">Name:</string>
    <string name="new_pub_location">Location:</string>
    <string name="new_pub_date">Date:</string>
    <string name="new_pub_time">Time:</string>
    <string name="new_pub_web">Web site (optional):</string>
    <string name="new_pub_images">Images, max. 4 (optional):</string>
    <string name="event_activity_event">Event</string>
    <string name="event_activity_title_camera_access">Camera access denied</string>
    <string name="event_activity_message_camera_access">Pick And Gol will not be able to take images from your device camera.</string>
    <string name="event_activity_image_process_error">Unable to process image</string>
    <string name="event_activity_validate_error_title">Invalid data</string>
    <string name="event_activity_error_name_event">You must specify a name for the event.</string>
    <string name="event_activity_error_category_event">You must select a category for the event.</string>
    <string name="event_activity_error_date_event"><![CDATA[You must specify date & hour for the event.]]></string>
    <string name="image_upload_error_title">Image Upload error</string>
    <string name="event_activity_image_upload_error_message">The selected image could not be uploaded. Please try again.</string>
    <string name="drawer_menu_login">Log in</string>
    <string name="drawer_menu_logout">Log out</string>
    <string name="drawer_menu_register">Sign up</string>
    <string name="drawer_menu_event_search">Event Search</string>
    <string name="drawer_menu_pub_search">Pub Search</string>
    <string name="drawer_menu_my_favorites">My Favorite Pubs</string>
    <string name="drawer_menu_your_account">Your account</string>
    <string name="new_user_name">Name:</string>
    <string name="new_user_name_hint">Enter a name for the new user</string>
    <string name="new_user_email">Email</string>
    <string name="new_user_email_hint">Enter an email address</string>
    <string name="new_user_password">Password</string>
    <string name="new_user_cancel_button">Cancel</string>
    <string name="new_user_sign_up_button">Sign up</string>
    <string name="new_user_password_hint">Enter a password</string>
    <string name="activity_new_user_title">Sign up</string>
    <string name="new_user_activity_validate_error_title">Invalid data</string>
    <string name="new_user_activity_validate_error_name">You must specify a name for the new user.</string>
    <string name="new_user_activity_validate_error_email">You must specify an email for the new user.</string>
    <string name="new_user_activity_validate_error_password">You must specify a password for the new user</string>
    <string name="activity_edit_user_title">Edit user</string>
    <string name="activity_edit_user_load_error">User detail error</string>
    <string name="activity_edit_user_modify_error">User modify error</string>
    <string name="activity_edit_user_validate_password_error">Password entries cannot be empty.</string>
    <string name="new_user_activity_registration_error_title">Error</string>
    <string name="new_user_activity_registration_title">User registration</string>
    <string name="new_user_activity_registration_message">The new user has been registered</string>
    <string name="edit_user_name_hint">Enter a name for the user</string>
    <string name="edit_user_email_hint">Enter an email for the user</string>
    <string name="edit_user_old_password_hint">Enter the old password of the user</string>
    <string name="edit_user_new_password_hint">Enter the new password of the user</string>
    <string name="edit_user_cancel">Cancel</string>
    <string name="edit_user_save">Save</string>
    <string name="edit_user_activity_process_image_error_title">Unable to process image</string>
    <string name="edit_user_activity_image_picked_permission_denied_title">Pictures access denied</string>
    <string name="image_picked_permission_denied_message">Pick And Gol might not be able to take pictures from your camera or gallery.</string>
    <string name="edit_user_activity_upload_image_error_title">Image Upload error</string>
    <string name="edit_user_activity_upload_image_error_message">The selected image could not be uploaded. Please try again.</string>
    <string name="edit_user_activity_upload_image_message">Uploading image (</string>
    <string name="event_search_settings_activity_title">Event Search Settings</string>
    <string name="activity_event_search_text">Search by text:</string>
    <string name="activity_event_search_hint">What are you looking for?</string>
    <string name="activity_event_search_category">Event category:</string>
    <string name="activity_event_search_distance">Distance from me:</string>
    <string name="event_search_settings_activity_all"><![CDATA[< All >]]></string>
    <string name="event_search_settings_activity_very_close">Very close (1 km)</string>
    <string name="event_search_settings_activity_my_area">In my area (5 km)</string>
    <string name="event_search_settings_activity_my_city">In my city (10 km)</string>
    <string name="event_search_settings_activity_far_away">Far away (50 km)</string>
    <string name="activity_event_detail_category">Category:</string>
    <string name="activity_event_detail_description">Description:</string>
    <string name="activity_event_detail_pubs">Pubs showing this event:</string>
    <string name="activity_event_detail_show_pubs">Show pubs in map</string>
    <string name="event_detail_activity_link_pub_title">Link to Pub</string>
    <string name="event_detail_activity_message_1">You are about to link this event to the pub \'</string>
    <string name="event_detail_activity_message_2">\'  Do you want to proceed?</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="event_detail_activity_session_error_message">Only registered users can link events to pubs.</string>
    <string name="event_detail_activity_title">Event Detail</string>
    <string name="event_detail_activity_load_categories">Loading categories…</string>
    <string name="event_detail_activity_unspecified_category">Unspecified category.</string>
    <string name="event_detail_activity_no_description">No description available.</string>
    <string name="event_detail_activity_pub">pub(s)</string>
    <string name="event_detail_activity_no_pubs">No pubs are showing this event yet.</string>
    <string name="event_detail_activity_linking_event">Linking Event…</string>
    <string name="event_detail_activity_link_event_fail_title">Link Event error</string>
    <string name="event_detail_activity_link_event_success_title">Link Event</string>
    <string name="event_detail_activity_link_event_success_message">This event has been linked to \'</string>
    <string name="activity_pub_search_keywords_title">Search by text:</string>
    <string name="activity_pub_search_keywords_text">What are you looking for?</string>
    <string name="activity_pub_search_sort">Sort by:</string>
    <string name="activity_pub_search_distance">Distance from me:</string>
    <string name="pub_search_settings_activity_title">Pub Search Settings</string>
    <string name="pub_search_settings_activity_field_names_name">Pub name</string>
    <string name="pub_search_settings_activity_field_names_owner">Pub owner</string>
    <string name="pub_search_settings_activity_field_names_distance">Distance from me</string>
    <string name="pub_search_settings_activity_field_names_any_order"><![CDATA[<Any order>]]></string>
    <string name="pub_search_settings_activity_distance_close">Very close (1 km)</string>
    <string name="pub_search_settings_activity_distance_area">In my area (5 km)</string>
    <string name="pub_search_settings_activity_distance_city">In my city (10 km)</string>
    <string name="pub_search_settings_activity_distance_far">Far away (50 km)</string>
    <string name="favorites_activity_session_error_title">You are not logged in</string>
    <string name="favorites_activity_session_error_message">First you must log in to the system.</string>
    <string name="favorites_activity_progress_searching">Searching favorites…</string>
    <string name="favorites_activity_favorite_error_title">Favorite listing error</string>
    <string name="favorites_activity_favorite_success_message1">Showing </string>
    <string name="favorites_activity_favorite_success_message2"> pub(s)</string>
    <string name="activity_favorites_title">My Favorite Pubs</string>
    <string name="activity_pub_detail_address">Address:</string>
    <string name="activity_pub_detail_website">Website:</string>
    <string name="activity_pub_detail_events">Future events in this pub:</string>
    <string name="activity_pub_detail_events_button_text">Show future events in this pub</string>
    <string name="pub_detail_menu_new_event_title">Create event</string>
    <string name="pub_detail_activity_event_created">The new event has been created.</string>
    <string name="pub_detail_activity_create_event_title">You are not logged in</string>
    <string name="pub_detail_activity_create_event_message">Only registered users can create new events.</string>
    <string name="pub_detail_activity_title">Pub Detail</string>
    <string name="pub_detail_activity_no_web_site"><![CDATA[< No website defined >]]></string>
    <string name="pub_detail_activity_resolving_address"><![CDATA[< Resolving address… >]]></string>
    <string name="pub_detail_activity_undefined_address"><![CDATA[< Undefined address >]]></string>
    <string name="pub_detail_activity_fetching_events"><![CDATA[< Fetching events… >]]></string>
    <string name="pub_detail_activity_search_events_fail"><![CDATA[< Unable to retrieve events for this pub >]]></string>
    <string name="pub_detail_activity_total_results">event(s).</string>
    <string name="pub_detail_activity_no_events">This pub has no events yet.</string>
    <string name="pub_detail_activity_toggle_favorite_fail_message_if_favorite">Unable to remove the pub from your favorites.</string>
    <string name="pub_detail_activity_toggle_favorite_fail_message_if_not_favorite">Unable to add the pub to your favorites.</string>
    <string name="pub_detail_activity_toggle_favorite_fail_title">Toggle Favorite error</string>
    <string name="pub_detail_activity_pub_added">Pub added to your favorites</string>
    <string name="pub_detail_activity_pub_removed">Pub removed from your favorites</string>
    <string name="main_activity_location_denied">Pick And Gol will not be able to search based on your location.</string>
    <string name="activity_new_pub_name_hint">Enter a name for the new pub</string>
    <string name="activity_new_pub_click_to_set">Click to set</string>
    <string name="activity_new_pub_web_hint">Url of the new pub</string>
    <string name="activity_new_pub_cancel">Cancel</string>
    <string name="activity_new_pub_create">Create</string>
</resources>