<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_menu_event_search"
            android:icon="@android:drawable/ic_menu_gallery"
            android:checked = "true"
            android:title="@string/drawer_menu_event_search"/>

        <item
            android:id="@+id/drawer_menu_pub_search"
            android:icon="@android:drawable/stat_sys_upload"
            android:checkable="true"
            android:title="@string/drawer_menu_pub_search"/>

        <item
            android:id="@+id/drawer_menu_my_favorites"
            android:icon="@android:drawable/stat_sys_download"
            android:checkable = "false"
            android:title="@string/drawer_menu_my_favorites"/>

        <item
            android:id="@+id/account_section"
            android:title="@string/drawer_menu_your_account">
            <menu>

                <item
                    android:id="@+id/drawer_menu_log_in"
                    android:icon="@android:drawable/ic_input_add"
                    android:checkable = "false"
                    android:title="@string/drawer_menu_login" />

                <item
                    android:id="@+id/drawer_menu_log_out"
                    android:icon="@android:drawable/stat_notify_more"
                    android:checkable = "false"
                    android:title="@string/drawer_menu_logout" />
                <item
                    android:id="@+id/drawer_menu_register"
                    android:icon="@android:drawable/ic_input_add"
                    android:checkable = "false"
                    android:title="@string/drawer_menu_register" />
            </menu>
        </item>

    </group>

</menu>