<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar for the actvity -->
    <include layout="@layout/toolbar_main"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/activity_new_user_buttons_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <RelativeLayout
                    android:id="@+id/activity_new_user_name_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#FFCACACA">

                    <TextView
                        android:id="@+id/activity_new_user_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_user_name"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_new_user_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_below="@+id/activity_new_user_name_label"
                        android:hint="@string/new_user_name_hint"
                        android:background="@android:color/white"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/activity_new_user_email_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#FFCACACA">

                    <TextView
                        android:id="@+id/activity_new_user_email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_user_email"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_new_user_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_below="@+id/activity_new_user_email_label"
                        android:hint="@string/new_user_email_hint"
                        android:background="@android:color/white"
                        android:inputType="textEmailAddress" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/activity_new_user_password_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#FFCACACA">

                    <TextView
                        android:id="@+id/activity_new_user_password_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_user_password"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_new_user_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_below="@+id/activity_new_user_password_label"
                        android:hint="@string/new_user_password_hint"
                        android:background="@android:color/white"
                        android:inputType="textPassword" />
                </RelativeLayout>
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/activity_new_user_buttons_layout"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="#FFCACACA">

            <Button
                android:id="@+id/activity_new_user_button_cancel"
                android:text="@string/new_user_cancel_button"
                android:layout_width="100dp"
                android:layout_height="50dp"/>

            <FrameLayout
                android:layout_height="match_parent"
                android:layout_width="30dp">
            </FrameLayout>

            <Button
                android:id="@+id/activity_new_user_button_sign_in"
                android:text="@string/new_user_sign_up_button"
                android:layout_width="100dp"
                android:layout_height="50dp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>