<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="io.keepcoding.pickandgol.activity.NewPubActivity">

    <!-- Toolbar for the actvity -->
    <include layout="@layout/toolbar_main"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/activity_new_pub_buttons_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <RelativeLayout
                    android:id="@+id/activity_new_pub_name_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#FFCACACA">

                    <TextView
                        android:id="@+id/activity_new_pub_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_pub_name"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_new_pub_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_below="@+id/activity_new_pub_name_label"
                        android:hint="@string/activity_new_pub_name_hint"
                        android:background="@android:color/white"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/activity_new_pub_location_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#FFCACACA">

                    <TextView
                        android:id="@+id/activity_new_pub_location_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_pub_location"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_new_pub_location_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_below="@+id/activity_new_pub_location_label"
                        android:hint="@string/activity_new_pub_click_to_set"
                        android:background="@android:color/white"
                        android:focusable="false"
                        android:clickable="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/activity_new_pub_description_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#FFCACACA">

                    <TextView
                        android:id="@+id/activity_new_pub_web_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_pub_web"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_new_pub_web_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_below="@+id/activity_new_pub_web_label"
                        android:hint="@string/activity_new_pub_web_hint"
                        android:background="@android:color/white"
                        android:inputType="textUri"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/activity_new_pub_image_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#FFCACACA">

                    <TextView
                        android:id="@+id/activity_new_pub_image_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_pub_images"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"/>

                    <TableLayout
                        android:id="@+id/activity_new_pub_image_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_below="@+id/activity_new_pub_image_label"
                        android:gravity="center_horizontal"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/activity_new_pub_buttons_layout"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="#FFCACACA">

            <Button
                android:id="@+id/activity_new_pub_button_cancel"
                android:text="@string/activity_new_pub_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"/>

            <FrameLayout
                android:layout_height="match_parent"
                android:layout_width="30dp">

            </FrameLayout>

            <Button
                android:id="@+id/activity_new_pub_button_create"
                android:text="@string/activity_new_pub_create"
                android:layout_width="100dp"
                android:layout_height="50dp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
